2015-07-11  Chris Rorvick  <chris@rorvick.com>

	Prefer type aliases to typedefs

	C++11 type aliases are more general than typedefs.

2014-12-30  Chris Rorvick  <chris@rorvick.com>

	Use xdr() for encoding/decoding size

	The XDR::xdr_ops function takes a signed value, requiring some
	coercing to us it for the unsigned size value.  Use our API
	instead to clean up the code.

2014-12-29  Chris Rorvick  <chris@rorvick.com>

	Encode map entries using std::pair specialization

	Now that const values can be encoded we can use the std::pair
	logic.

2014-12-28  Chris Rorvick  <chris@rorvick.com>

	Remove unnecessary const_cast

	Now that an const T overload of xdr() has been added back, the
	cast is no longer necessary.

2014-12-27  Chris Rorvick  <chris@rorvick.com>

	Add const overload for encoding

	Now that it is not overloaded for other reasons we can add the
	const overload back without having to worry much about which
	overload/ specialization will be matched.

2014-12-26  Chris Rorvick  <chris@rorvick.com>

	Use xdrer specialization for std::string

2014-12-25  Chris Rorvick  <chris@rorvick.com>

	Use xdrer specialization for std::pair

2014-12-25  Chris Rorvick  <chris@rorvick.com>

	Rename namespace: `detail' => `impl'

2014-12-24  Chris Rorvick  <chris@rorvick.com>

	Split header out into many

	Each STL container added pulls in another standard library
	header.  This is a waste of time when building if someone has
	otherwise been careful to only pull in only what is needed.
	Split the definitions out by supported container to alleviate
	this issue.

2014-12-23  Chris Rorvick  <chris@rorvick.com>

	Add support for T::xdr(XDR*)

	Route the encoding/decoding through a template class and have
	the primary implementation call into T::xdr(XDR*) and write
	specializations for everything else.  Actually, not *everything*
	yet, but eventually.

2014-12-22  Chris Rorvick  <chris@rorvick.com>

	Add support for std::list
